# haskell-sandbox

./: .gitpod.Dockerfile  .gitpod.yml  README.md  haskell-sandbox.cabal  passmgr.17  primes.17  stack.yaml  test.17
app/: Aoc2023.hs  Autotap.hs  Axiomator.hs  Cards.hs  Combinators.hs  Consensus.hs  GenericLens.hs  Hanabi.hs  LSystem.hs  Main.hs  MtgAssistant.hs  Nurikabe.hs  Pinball.hs  SC2Optimizer.hs  Sudoku.hs  YerAWizard.hs
src/: Evaluator.hs  Parser.hs  Types.hs
src/Aoc2023/: Day1.hs  Day2.hs  Day3.hs  Day4.hs
test/: Spec.hs
