name:                haskell-sandbox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-sandbox#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser, Types, Evaluator
  build-depends:       base >= 4.7 && < 5
                     , text
                     , unordered-containers
                     , mtl
                     , parsec
                     , vector
                     , witherable
                     , hashable
                     , containers
  default-language:    Haskell2010

executable run17
  hs-source-dirs:      app
  main-is:             Run17.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-sandbox
                     , parsec
                     , containers
                     , unordered-containers
                     , vector
                     , mtl
                     , lens
  default-language:    Haskell2010

executable consensus
  hs-source-dirs:      app
  main-is:             Consensus.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-sandbox
                     , parsec
                     , containers
                     , unordered-containers
                     , vector
                     , mtl
                     , lens
  default-language:    Haskell2010

executable yer-a-wizard
  hs-source-dirs:      app
  main-is:             YerAWizard.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-sandbox
                     , parsec
                     , containers
                     , unordered-containers
                     , vector
                     , mtl
                     , lens
                     , text
  default-language:    Haskell2010

executable mtg-autotap
  hs-source-dirs:      app
  main-is:             Autotap.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-sandbox
                     , parsec
                     , containers
                     , unordered-containers
                     , vector
                     , mtl
                     , lens
                     , text
  default-language:    Haskell2010

executable hanabi
  hs-source-dirs:      app
  main-is:             Hanabi.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-sandbox
                     , parsec
                     , containers
                     , unordered-containers
                     , vector
                     , mtl
                     , lens
                     , text
  default-language:    Haskell2010

executable sudoku
  hs-source-dirs:      app
  main-is:             Sudoku.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-sandbox
                     , parsec
                     , containers
                     , unordered-containers
                     , vector
                     , mtl
                     , lens
                     , sort
                     , freer-simple
                     , text
  default-language:    Haskell2010

executable axiomator
  hs-source-dirs:      app
  main-is:             Axiomator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-sandbox
                     , parsec
                     , containers
                     , unordered-containers
                     , vector
                     , mtl
                     , lens
                     , text
                     , freer-simple
                     , tasty
                     , tasty-hunit
  default-language:    Haskell2010

executable combinators
  hs-source-dirs:      app
  main-is:             Combinators.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-sandbox
                     , parsec
                     , containers
                     , unordered-containers
                     , vector
                     , mtl
                     , lens
                     , text
                     , freer-simple
                     , tasty
                     , tasty-hunit
  default-language:    Haskell2010

test-suite haskell-sandbox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-sandbox
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , unordered-containers
                     , vector
                     , witherable
                     , hashable
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xaviershay/haskell-sandbox
